tests/v0-fail/unordered.out
Running <root>/unordered.cli ...

printf "a\nb\n"
---
a
b
---
ERROR: pattern unordered at line <root>/unordered.cli:4 does not match output line "<eof>"
matching Sequence([Unordered([Literal(a), Literal(b), Literal(c)]), End])
  matching Unordered([Literal(a), Literal(b), Literal(c)])
    matching Literal(c)
    literal FAILED match: "a" == "c"
    matching Literal(a)
    literal match: "a" == "a"
    matching Literal(c)
    literal FAILED match: "b" == "c"
    matching Literal(b)
    literal match: "b" == "b"
    matching Literal(c)

❌ FAIL

<root>/unordered.cli FAILED
Error: pattern unordered at line <root>/unordered.cli:4 does not match output line "<eof>"

