tests/v0-fail/unordered.cli
#!/usr/bin/env clitest --v0

$ printf "a\nb\n"
unordered {
    ! a
    ! b
    ! c
}
